--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ ul {
 
 .contact {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     height: 4vh;
     position: absolute;
