Contact Bug Fix, ajax link to src file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,7 @@ ul {
     background-color: transparent;
     border: 2px solid var(--color7);
     font-family: var(--Monte);
+    flex-direction: row;
 }
 
 .contact:hover {
