Scroll-top bg-color to white and validated index.html to html-practice

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1163,6 +1163,7 @@ ul {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    background: #fff;
 }
 
 .scroll-top:hover {
