--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -875,7 +875,7 @@ ul {
     height: 30vh;
     display: flex;
     align-items: center;
-    padding: 0% 30% 0% 5%;
+    padding: 0% 20% 0% 5%;
     font-family: var(--Nuni);
     font-size: 2.5rem;
     margin: 5% 0%;
@@ -1627,6 +1627,10 @@ ul {
     .contact-design-top {
         height: 15%;
     }
+
+    .sub-description-container {
+        font-size: 2rem;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -1868,6 +1872,9 @@ ul {
         width: 40%;
     }
 
+    .sub-description-container {
+        font-size: 1.5rem;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -2062,5 +2069,10 @@ ul {
 
     .work-number {
         font-size: 1rem;
+    }
+
+    .sub-description-container {
+        font-size: 1.1rem;
+        height: 25vh;
     }
 }
